--- a/src/themes/normalize.css
+++ b/src/themes/normalize.css
@@ -5,6 +5,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, address, em, img, 
     border: 0;
     outline: 0;
     font-size: 100%;
+    font-family: "Open Sans", "Helvetica Neue", helvetica, arial, verdana, "sans-serif";
     vertical-align: baseline;
     background: transparent;
     box-sizing: border-box;
@@ -29,7 +30,7 @@ html, body {
 
 body {
     color: #505f6e;
-    font-size: 13px;
+    font-size: 14px;
     background: #f0f3f5;
     line-height: 1.5;
     -webkit-user-select: none;
@@ -72,32 +73,25 @@ select, textarea, input[type='text'], input[type='password'], input[type='tel'] 
 textarea {
     resize: none;
 }
-input[type='checkbox'], input[type='checkbox']::after {
-    margin: 0 20px 0 0;
-    padding: 0;
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    vertical-align: middle;
-    background-color: #f2f3ee;
-}
-
-input[type='checkbox']::after {
+input[type='radio'],
+input[type='checkbox'] {
     position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
-    display: block;
-    width: 30px;
-    height: 30px;
-    background-position: center -128px;
+    filter: alpha(opacity=0);
+    opacity: 0;
 }
-
-input[type='checkbox']:checked::after {
-    background-position: center -101px;
+.fa.fa-circle-o,
+.fa.fa-square-o {
+    font-size: 16px;
 }
-
-input[disabled='disabled'] {
-    background: #f0f1f0 !important;
+input[type='radio']:disabled + .fa.fa-circle-o,
+input[type='checkbox']:disabled + .fa.fa-square-o {
+    color: #ccc !important;
+}
+input[type='radio']:checked + .fa.fa-circle-o:before {
+    content: "\f192";
+}
+input[type='checkbox']:checked + .fa.fa-square-o:before {
+    content: "\f046";
 }
 
 ::-webkit-input-placeholder {
@@ -120,72 +114,31 @@ input[disabled='disabled'] {
     color: #ccc;
     font-size: 80%;
 }
-.font10 { font-size: 10px;}
-.font12 { font-size: 12px;}
-.font14 { font-size: 14px;}
-.font16 { font-size: 16px;}
-.font18 { font-size: 18px;}
-.font20 { font-size: 20px;}
-.font24 { font-size: 24px;}
-.light {
-    color: #ff7800;
-}
+.f10 { font-size: 10px;}
+.f12 { font-size: 12px;}
+.f14 { font-size: 14px;}
+.f16 { font-size: 16px;}
+.f18 { font-size: 18px;}
+.f20 { font-size: 20px;}
+.f24 { font-size: 24px;}
+.light { color: #ff7800;}
+.msg { color: #7d8ca0;}
+.info { color: #7d8ca0;}
+.warn { color: #ec008c;}
+.orange { color: #fb7c00;}
+.mt5 { margin-top: 5px;}
+.mt10 { margin-top: 10px;}
+.mt15 { margin-top: 15px;}
+.ml10 { margin-left: 10px;}
+.mb15 { margin-bottom: 15px;}
+.tl { text-align: left;}
+.tc { text-align: center;}
+.tr { text-align: right;}
+.fl { float: left;}
+.fr { float: right;}
+.rel { position: relative;}
+.abs { position: absolute;}
 
-.msg {
-    color: #7d8ca0;
-}
-
-.info {
-    color: #7d8ca0;
-}
-
-.warn {
-    color: #ec008c;
-}
-
-.orange {
-    color: #fb7c00;
-}
-.mt5 {
-    margin-top: 5px;
-}
-.mt10 {
-    margin-top: 10px;
-}
-.mt15 {
-    margin-top: 15px;
-}
-.ml10 {
-    margin-left: 10px;
-}
-.mb15 {
-    margin-bottom: 15px;
-}
-.tl {
-    text-align: left;
-}
-
-.tc {
-    text-align: center;
-}
-
-.tr {
-    text-align: right;
-}
-
-.fl {
-    float: left;
-}
-
-.fr {
-    float: right;
-}
-.rel {
-    position: relative;
-}
-.abs {
-    position: absolute;
-}
 .clear {
     clear: both;
     width: 100%;
@@ -247,96 +200,6 @@ input[disabled='disabled'] {
     margin-right: 30px;
 }
 
-.radius {
-    border-radius: 3px;
-}
-
-.shadow {
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .3);
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .31);
-    /*box-shadow: 1px 1px 1px 1px rgba(197, 197, 197, .7);*/
-}
-
-.panel {
-    position: relative;
-    margin: 10px 0 0;
-    background: rgba(255, 255, 255, 1);
-    display: block;
-}
-.view-panel, .view-list, .view-form, .view-cont, .wrapper {
-    position: absolute;
-    z-index: 100;
-    top: 50px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    overflow: auto; /* winphone8和android4+ */
-    -webkit-overflow-scrolling: touch; /* ios5+ */
-    overflow-scrolling: touch;
-}
-
-.view-panel {
-    bottom: 50px;
-}
-
-.view-form {
-    bottom: 90px;
-}
-
-.wrapper {
-    top: 0;
-    bottom: 0;
-}
-
-.view-cont {
-    top: 0;
-    bottom: 50px;
-}
-
-.box {
-    padding: 10px;
-    background: rgba(255, 255, 255, 1);
-    display: block;
-}
-
-.hr {
-    padding-top: 2px;
-    background-image: url(../images/line.png?v=1);
-    background-repeat: repeat-x;
-    background-size: auto 2px;
-    display: block;
-}
-
-.block {
-    padding: 10px 20px 10px 15px;
-    border-top: 1px solid #ccd5df;
-    border-bottom: 1px solid #ccd5df;
-    display: block;
-}
-/*multi-block*/
-.multi-block {
-    border-top: 1px solid #ccd5df;
-    border-bottom: 1px solid #ccd5df;
-    display: block;
-}
-.multi-block .block {
-    border-top: none;
-    border-bottom: none;
-}
-.multi-block .line {
-    margin-left: 15px;
-    height: 0;
-    border-bottom: 1px solid #ccd5df;
-}
-
-.bn {
-    border: none;
-}
-
-.btno {
-    border-top: none;
-}
-
 .row {
     width: 100%;
     display: table;
@@ -346,104 +209,6 @@ input[disabled='disabled'] {
 .row .col {
     display: table-cell;
     vertical-align: middle;
-}
-
-.icons, .prev, .next, .ok, .no, .radio, .handle, .edit, .del, .dot, .camera, .call, .coord {
-    background-image: url(../images/sprite.png?v=1);
-    background-repeat: no-repeat;
-    background-size: 40px auto;
-    vertical-align: middle;
-}
-
-.ok, .no, .radio, .handle, .edit {
-    width: 30px;
-    height: 25px;
-    background-position: center -150px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.ok.sel {
-    background-position: center -175px;
-}
-
-.no {
-    background-position: center -200px;
-}
-
-.radio {
-    background-position: center -25px;
-}
-
-.radio.sel {
-    background-position: center 0;
-}
-
-.handle {
-    background-position: center -50px;
-}
-
-.edit {
-    background-position: center -75px;
-}
-
-.dot {
-    width: 25px;
-    height: 25px;
-    background-position: center -100px;
-    display: inline-block;
-}
-
-.dot.sel {
-    width: 25px;
-    height: 25px;
-    background-position: center -125px;
-}
-.call, .coord {
-    height: 25px;
-    display: inline-block;
-    vertical-align: middle;
-}
-.call {
-    line-height: 25px;
-    padding-left: 28px;
-    background-position: -8px -225px;
-}
-.coord {
-    width: 20px;
-    background-position: center -250px;
-}
-
-.prev, .next {
-    background-size: 10px auto;
-}
-
-.prev {
-    padding-left: 20px;
-    background-image: url(../icons/prev.png?v=1);
-    background-position: left center;
-}
-
-.next {
-    padding-right: 20px;
-    background-image: url(../icons/next.png?v=1);
-    background-position: right center;
-}
-.del {
-    background-image: url(../icons/del.png?v=1);
-    background-position: center center;
-    background-size: 12px auto;
-}
-.camera {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 75px;
-    height: 53px;
-    display: block;
-    background-image: url(../icons/camera.png?v=1);
-    background-position: center center;
-    background-size: 55px auto;
 }
 .tags {
     padding: 5px 0;
@@ -526,255 +291,10 @@ input[disabled='disabled'] {
     background: #ebebeb;
 }
 
-.hide {
-    position: relative;
-    display: none !important;
-}
-
 .transition {
     -webkit-transition: all .3s ease 0s;
     -moz-transition: all .3s ease 0s;
     -ms-transition: all .3s ease 0s;
     -o-transition: all .3s ease 0s;
     transition: all .3s ease 0s;
-}
-
-/*屏幕固定定位*/
-.fixed, .fixed-lt, .fixed-rt, .fixed-lb, .fixed-rb {
-    position: absolute;
-    z-index: 2000;
-    width: 100%;
-    overflow: hidden;
-}
-
-/* 左上 */
-.fixed-lt {
-    top: 0;
-    left: 0;
-}
-
-.fixed-lt.hid {
-    top: -50px;
-}
-
-/* 右上 */
-.fixed-rt {
-    top: 0;
-    right: 0;
-    height: 100%;
-    background: rgba(0, 0, 0, .25);
-}
-
-.fixed-rt.hid {
-    right: -100%;
-}
-
-.fixed-rt.shw {
-    right: 0;
-    padding-left: 20%;
-}
-.fixed-rt.fill {
-    padding: 0;
-}
-
-.fixed-rt > .panel {
-    height: inherit;
-    margin: 0;
-}
-
-/* 左下 */
-.fixed-lb {
-    left: 0;
-    bottom: 0;
-}
-
-.fixed-lb.hid {
-    top: 100%;
-}
-.fixed-lb.shw {
-    top: auto;
-}
-
-/* 右下 */
-.fixed-rb {
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    background: rgba(0, 0, 0, .25);
-}
-
-.fixed-rb.hid {
-    bottom: -120%;/*-100%*/
-}
-.fixed-rb.shw {
-    bottom: 0;
-    padding-top: 0;
-}
-
-.fixed-rb > .panel {
-    position: absolute;
-    top: auto;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    max-height: 100%;
-    background-color: rgba(255, 255, 255, 1);
-    margin: 0;
-}
-.fixed-rb .view-cont {
-    max-height: 100%;
-    padding: 0 0 50px;
-}
-.fixed-rb .headbar {
-    position: static;
-    width: 100%;
-}
-.fixed-rb .btmbar {
-    position: absolute;
-    z-index: 200;
-}
-
-.opacity {
-    opacity: 0;
-}
-/*topbar*/
-.headbar {
-    position: absolute;
-    z-index: 100;
-    font-size: 15px;
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 1);
-    border-bottom: 1px solid #ccd5df;
-    overflow: hidden;
-}
-.headbar.big {
-    height: 70px;
-}
-
-.headbar .prev {
-    width: 60px;
-    background-position: 20px center;
-}
-
-.headbar .title {
-    padding: 0 60px 0 0;
-}
-
-.bg {
-    background: #f0f3f5;
-}
-
-.headline, .title {
-    font-size: 15px;
-}
-.desc {
-    font-size: 12px;
-}
-
-.load {
-    background-image: url(../images/loading.gif?v=1);
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-.load > * {
-    visibility: hidden;
-}
-
-.main {
-    clear: both;
-    min-height: 240px;
-    padding: 0;
-    overflow: hidden;
-}
-
-.content {
-    padding: 10px 10px 10px 10px;
-}
-
-.header {
-    text-align: center;
-    overflow: hidden;
-}
-
-.header .caption {
-    color: #ec008c;
-    font-size: 22px;
-    line-height: 44px;
-    height: 44px;
-    padding-left: 50px;
-    background: url(../images/icon.png?v=1) -100px 100px no-repeat;
-    background-size: 36px 873px;
-    display: inline-block;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
-}
-
-.footer {
-}
-.empty {
-    padding: 15px 20px;
-}
-.loading {
-    position: fixed;
-    z-index: 101010;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    line-height: 44px;
-    background: url(../images/loading.gif?v=1) center center no-repeat;
-    background-color: rgba(225, 225, 225, 0.5);
-    display: none;
-    overflow: hidden;
-}
-
-/*switch*/
-.switch {
-    width: 47px;
-    height: 26px;
-    margin: 3px 0;
-    text-align: left;
-    background: #b9b9b9;
-    display: inline-block;
-    border: 1px solid #ccd5df;
-    border-radius: 13px;
-}
-
-.switch .handle {
-    margin-left: 0;
-}
-
-.switch.sel {
-    background: #0487e2;
-}
-
-.switch.sel .handle {
-    margin-left: 15px;
-}
-
-/*counter*/
-.counter {
-    height: 38px;
-    background: #f5f7f9;
-    border: 1px solid #d8dce2;
-    display: inline-table;
-    vertical-align: middle;
-    border-radius: 3px;
-    overflow: hidden;
-}
-.counter>a, .counter >b, .counter >input {
-    width: 40px;
-    font-size: 20px;
-    height: inherit;
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-}
-.counter >input, .counter >input:focus {
-    font-size: 15px;
-    margin: 2px 0;
-    height: 34px;
-    padding: 2px;
-    background: #fff;
-    border: 1px solid #d8dce2;
 }
